// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputWithUnits component (Independent) renders InputWithUnits component 1`] = `
.emotion-0 {
  display: grid;
  grid-template-columns: 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  width: 100%;
}

.emotion-1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-2 {
  position: absolute;
  right: 0;
  width: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 100%;
  font-size: 8px;
  color: #A7A2BD;
  cursor: pointer;
  z-index: 2;
}

.emotion-2 span {
  padding: 0 4px;
}

.emotion-4 {
  height: 20px;
  font-size: 10px;
  border-radius: 4px;
  padding-inline: 6px;
  outline: none!important;
  font-weight: 500;
}

.emotion-4.emotion-4 .ant-input-prefix {
  -webkit-margin-end: 6px;
  margin-inline-end: 6px;
}

.emotion-4.emotion-4 i {
  font-size: 12px!important;
}

.emotion-4[type='number']::-webkit-inner-spin-button,
.emotion-4 input[type='number']::-webkit-inner-spin-button {
  display: none;
}

.emotion-4.ant-input {
  font-weight: 500!important;
}

.emotion-4 .ant-input-prefix i {
  color: #27ae60;
}

.emotion-4 .ant-input-prefix {
  -webkit-margin-end: 8px;
  margin-inline-end: 8px;
}

.emotion-4 i {
  color: #d9d9d9;
  -webkit-transition: color 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
  transition: color 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
}

.emotion-4.ant-input-affix-wrapper-focused i {
  color: #27ae60;
}

.emotion-4.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(
      .ant-input-affix-wrapper-borderless
    ).ant-input-affix-wrapper,
.emotion-4.ant-input-status-error:not(.ant-input-disabled) {
  background-color: #eb57570a;
  border-width: 1px;
}

.emotion-4.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(
      .ant-input-affix-wrapper-borderless
    ).ant-input-affix-wrapper i,
.emotion-4.ant-input-status-error:not(.ant-input-disabled) i {
  color: #eb5757;
}

.emotion-4.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(
      .ant-input-affix-wrapper-borderless
    ).ant-input-affix-wrapper i:before,
.emotion-4.ant-input-status-error:not(.ant-input-disabled) i:before {
  content: '\\e91c';
}

.emotion-4.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(
      .ant-input-affix-wrapper-borderless
    ).ant-input-affix-wrapper input,
.emotion-4.ant-input-status-error:not(.ant-input-disabled) input {
  background: transparent;
}

.emotion-4.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(
      .ant-input-affix-wrapper-borderless
    ).ant-input-affix-wrapper input::-webkit-input-placeholder {
  color: #eb5757;
}

.emotion-4.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(
      .ant-input-affix-wrapper-borderless
    ).ant-input-affix-wrapper input::-moz-placeholder {
  color: #eb5757;
}

.emotion-4.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(
      .ant-input-affix-wrapper-borderless
    ).ant-input-affix-wrapper input:-ms-input-placeholder {
  color: #eb5757;
}

.emotion-4.ant-input-status-error:not(.ant-input-disabled) input::-webkit-input-placeholder {
  color: #eb5757;
}

.emotion-4.ant-input-status-error:not(.ant-input-disabled) input::-moz-placeholder {
  color: #eb5757;
}

.emotion-4.ant-input-status-error:not(.ant-input-disabled) input:-ms-input-placeholder {
  color: #eb5757;
}

.emotion-4.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(
      .ant-input-affix-wrapper-borderless
    ).ant-input-affix-wrapper input,
.emotion-4.ant-input-status-error:not(.ant-input-disabled) input,
.emotion-4.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(
      .ant-input-affix-wrapper-borderless
    ).ant-input-affix-wrapper input::placeholder,
.emotion-4.ant-input-status-error:not(.ant-input-disabled) input::placeholder {
  color: #eb5757;
}

.emotion-4 .ant-input-group-addon {
  border-left: 0;
}

.emotion-4 i {
  color: #d8d8da;
  font-size: 12px!important;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <span
          class="ant-dropdown-trigger"
        >
          px
        </span>
      </div>
      <input
        aria-label="Value input"
        class="ant-input ant-input-sm emotion-3 ant-input-outlined input-with-units emotion-4"
        placeholder="0"
        type="text"
        value="10"
      />
    </div>
  </div>
</div>
`;

exports[`InputWithUnits component (Independent) shows icon when icon prop is provided 1`] = `
.emotion-0 {
  display: grid;
  grid-template-columns: 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  width: 100%;
}

.emotion-1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-2 {
  position: absolute;
  right: 0;
  width: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 100%;
  font-size: 8px;
  color: #A7A2BD;
  cursor: pointer;
  z-index: 2;
}

.emotion-2 span {
  padding: 0 4px;
}

.emotion-4 {
  height: 20px;
  font-size: 10px;
  border-radius: 4px;
  padding-inline: 6px;
  outline: none!important;
  font-weight: 500;
}

.emotion-4.emotion-4 .ant-input-prefix {
  -webkit-margin-end: 6px;
  margin-inline-end: 6px;
}

.emotion-4.emotion-4 i {
  font-size: 12px!important;
}

.emotion-4[type='number']::-webkit-inner-spin-button,
.emotion-4 input[type='number']::-webkit-inner-spin-button {
  display: none;
}

.emotion-4.ant-input {
  font-weight: 500!important;
}

.emotion-4 .ant-input-prefix i {
  color: #27ae60;
}

.emotion-4 .ant-input-prefix {
  -webkit-margin-end: 8px;
  margin-inline-end: 8px;
}

.emotion-4 i {
  color: #d9d9d9;
  -webkit-transition: color 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
  transition: color 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
}

.emotion-4.ant-input-affix-wrapper-focused i {
  color: #27ae60;
}

.emotion-4.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(
      .ant-input-affix-wrapper-borderless
    ).ant-input-affix-wrapper,
.emotion-4.ant-input-status-error:not(.ant-input-disabled) {
  background-color: #eb57570a;
  border-width: 1px;
}

.emotion-4.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(
      .ant-input-affix-wrapper-borderless
    ).ant-input-affix-wrapper i,
.emotion-4.ant-input-status-error:not(.ant-input-disabled) i {
  color: #eb5757;
}

.emotion-4.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(
      .ant-input-affix-wrapper-borderless
    ).ant-input-affix-wrapper i:before,
.emotion-4.ant-input-status-error:not(.ant-input-disabled) i:before {
  content: '\\e91c';
}

.emotion-4.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(
      .ant-input-affix-wrapper-borderless
    ).ant-input-affix-wrapper input,
.emotion-4.ant-input-status-error:not(.ant-input-disabled) input {
  background: transparent;
}

.emotion-4.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(
      .ant-input-affix-wrapper-borderless
    ).ant-input-affix-wrapper input::-webkit-input-placeholder {
  color: #eb5757;
}

.emotion-4.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(
      .ant-input-affix-wrapper-borderless
    ).ant-input-affix-wrapper input::-moz-placeholder {
  color: #eb5757;
}

.emotion-4.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(
      .ant-input-affix-wrapper-borderless
    ).ant-input-affix-wrapper input:-ms-input-placeholder {
  color: #eb5757;
}

.emotion-4.ant-input-status-error:not(.ant-input-disabled) input::-webkit-input-placeholder {
  color: #eb5757;
}

.emotion-4.ant-input-status-error:not(.ant-input-disabled) input::-moz-placeholder {
  color: #eb5757;
}

.emotion-4.ant-input-status-error:not(.ant-input-disabled) input:-ms-input-placeholder {
  color: #eb5757;
}

.emotion-4.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(
      .ant-input-affix-wrapper-borderless
    ).ant-input-affix-wrapper input,
.emotion-4.ant-input-status-error:not(.ant-input-disabled) input,
.emotion-4.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(
      .ant-input-affix-wrapper-borderless
    ).ant-input-affix-wrapper input::placeholder,
.emotion-4.ant-input-status-error:not(.ant-input-disabled) input::placeholder {
  color: #eb5757;
}

.emotion-4 .ant-input-group-addon {
  border-left: 0;
}

.emotion-4 i {
  color: #d8d8da;
  font-size: 12px!important;
}

.emotion-5 {
  -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
  transition: transform 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <span
          class="ant-dropdown-trigger"
        >
          px
        </span>
      </div>
      <span
        class="ant-input-affix-wrapper ant-input-affix-wrapper-sm emotion-3 ant-input-outlined input-with-units emotion-4"
      >
        <span
          class="ant-input-prefix"
        >
          <i
            class="icon-add-folder_filled emotion-5"
          />
        </span>
        <input
          aria-label="Value input"
          class="ant-input ant-input-sm emotion-3"
          placeholder="0"
          type="text"
          value="10"
        />
      </span>
    </div>
  </div>
</div>
`;
